--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Conversion_hosts.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Conversion_hosts.adoc
@@ -1,3 +1,5 @@
+// Module included in the following assemblies:
+// assembly_Preparation.adoc
 [id="Configuring_conversion_hosts_for_transformation"]
 = Configuring the conversion hosts for VDDK or SSH
 
