--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_vmware_source_environment.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_vmware_source_environment.adoc
@@ -11,7 +11,7 @@ Prepare the source environment for migration:
 ====
 The network configuration must not be changed in any way during the migration.
 
-IP addresses, VLANs, and other network configurations should not be changed before or after migration because the conversion process preserves the source virtual machine MAC addresses.
+IP addresses, VLANs, and other network configurations should not be changed before or after the migration because the conversion process preserves the source virtual machine MAC addresses.
 ====
 
 . Prepare the VMware virtual machines:
