--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Planning_questions.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Planning_questions.adoc
@@ -1,3 +1,5 @@
+// Module included in the following assemblies:
+// assembly_Planning.adoc
 [id="Planning_questions"]
 = Questions to ask before migration
 
@@ -8,9 +10,8 @@ What am I migrating?::
 
 What is the maximum number of disks, virtual machines, or NICs that I can migrate?::
 * There is no maximum number of disks or virtual machines that you can migrate. However, you may not want to migrate all your virtual machines at the same time, in order to minimize the impact on your users.
-
 * You can migrate a maximum of four NICs with each virtual machine.
-
++
 [IMPORTANT]
 ====
 If you exceed the capabilities of your environment, the migrations will fail. This situation could affect existing applications running on virtual machines attached to the network and storage.
@@ -18,8 +19,9 @@ If you exceed the capabilities of your environment, the migrations will fail. Th
 
 What operating systems can I migrate?::
 * For a list of supported guest operating systems, see link:https://access.redhat.com/articles/1351473[].
-* For a list of certified guest operating systems, see link:https://access.redhat.com/articles/1351473[].
- For a list of certified guest operating systems, see link:https://access.redhat.com/articles/973163[Certified Guest Operating Systems in Red Hat OpenStack Platform and Red Hat Enterprise Virtualization]. Although it is possible to migrate guest operating systems that are not certified for Red Hat Virtualization or OpenStack Platform, these guests are not officially supported.
+* For a list of certified guest operating systems, see link:https://access.redhat.com/articles/973163[].
++
+Although it is possible to migrate guest operating systems that are not certified for Red Hat Virtualization or OpenStack Platform, these guests are not officially supported.
 
 What resources does my target environment require?::
 * Your target environment must be large enough to run the migrated virtual machines in addition to the source virtual machines. The source virtual machines are not affected by the migration process.
