--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_IMS_overview.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_IMS_overview.adoc
@@ -1,39 +1,39 @@
-[id='Infrastructure_migration_solution_overview']
+[id="Infrastructure_migration_solution_overview"]
 = Infrastructure Migration Solution overview
 
 The Red Hat Infrastructure Migration Solution (IMS) enables you to migrate virtual machines from VMware 5.5 (and later) to the following target environments:
 
 * Red Hat Virtualization 4.2
 +
-Red Hat Virtualization (RHV) is a virtualization platform built on Red Hat Enterprise Linux. You can manage your virtual infrastructure, including hosts, virtual machines, networks, storage, and users, from a centralized graphical user interface or with a REST API. (For more information, see the link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/[Red Hat Virtualization documentation].)
+Red Hat Virtualization (RHV) is a virtualization platform built on Red Hat Enterprise Linux. You can manage your virtual infrastructure, including hosts, virtual machines, networks, storage, and users, from a centralized graphical user interface or with a REST API (for more information, see the link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/[Red Hat Virtualization documentation]).
 
-* Red Hat OpenStack Platform 13
+* Red Hat OpenStack Platform 13 or 14
 +
-Red Hat OpenStack Platform enables you to create a scaleable, fault-tolerant, private or public cloud based on Red Hat Enterprise Linux. (For more information, see the link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/14/[Red Hat OpenStack Platform documentation].)
-Note
+Red Hat OpenStack Platform enables you to create a scaleable, fault-tolerant, private or public cloud based on Red Hat Enterprise Linux (for more information, see the link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/14/[Red Hat OpenStack Platform documentation]).
 
-The migration process is performed with CloudForms 4.7, a user interface for managing the infrastructure. (For more information, see the link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/[Red Hat CloudForms documentation].)
-
-The infrastructure migration has the following key steps:
+The migration process is performed with CloudForms 4.7, a user interface for managing the infrastructure (for more information, see the link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/[Red Hat CloudForms documentation]).
 
 .Migration phases
 
-The Infrastructure Migration Solution has 4 key phases:
+The Infrastructure Migration Solution has the following key phases:
 
 . xref:Planning_the_migration[Planning the migration]
-+
-* xref:Planning_questions[Questions designed to assess the resources and time required for your migration]
-* xref:Best_practices_for_migration[Recommendations to minimize the impact on your users]
+
+* xref:Planning_questions[Questions to ask before migration], to help you assess the resources and time required for your migration
+* xref:Best_practices_for_migration[Recommendations for migration], to minimize the impact on your users
 
 . xref:Preparing_the_environment_for_migration[Preparing the environment for migration]
-+
-* xref:Preparing_the_vmware_source_environment[Preparing the source network and checking the virtual machines for anything that could hinder the migration process]
-* xref:Preparing_the_target_environment[Configuring the target storage and networks, installing software, and adding the providers to CloudForms]
 
-. xref:Migrating_the_infrastructure[Migration]
+* xref:Preparing_the_vmware_source_environment[Preparing the source environment], by extending the network and checking the virtual machines
+* xref:Preparing_the_target_environment[Preparing the target environment], including configuring the target storage and networks, installing software, and configuring CloudForms
+* xref:Configuring_conversion_hosts_for_transformation[Configuring the conversion hosts]. Conversion hosts are RHV hosts or OpenStack Platform instances running `virt-v2v` and `virt-v2v-wrapper`, which perform the migration.
+
+. xref:Migrating_the_infrastructure[Migrating the infrastructure]
+
+* xref:Creating_an_infrastructure_mapping[Creating an infrastructure mapping], to map your source and target infrastructures
+* xref:Creating_and_running_a_migration_plan[Creating and running a migration plan]
 +
-* xref:Creating_an_Infrastructure_Mapping[Mapping the source and target infrastructures]
-* xref:Creating_and_running_a_migration_plan[Creating and running a migration plan]. For a detailed description of the migration process, see xref:Vmware_to_rhv_workflow[] or xref:Vmware_to_osp_workflow[].
+For a detailed description of the migration process, see xref:Vmware_to_rhv_workflow[] or xref:Vmware_to_osp_workflow[].
 
 include::modules/con_Vmware_to_rhv_workflow.adoc[leveloffset=+1]
 include::modules/con_Vmware_to_osp_workflow.adoc[leveloffset=+1]
