--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Troubleshooting.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Troubleshooting.adoc
@@ -1,11 +1,17 @@
-[id='Troubleshooting']
+[id="Troubleshooting"]
 = Troubleshooting
 
-// If errors occur for reasons unrelated to the infrastructure mapping or migration plan (for example, network outage), you can retry the migration plan or re-migrate previously migrated virtual machines. See xref:Retrying_and_remigrating[].
+To troubleshoot migration errors, see the following:
 
-If the cause of the failed migration is not clear, see xref:Logs[] and xref:Common_issues_and_mistakes[].
+* xref:Migration_logs[]
+* xref:Common_issues_and_mistakes[]:
 
+** xref:Infrastructure_mapping_errors[]
+** xref:Migration_plan_errors[]
+** xref:Virtual_machine_migration_errors[] describes configuration errors in the source/target environments and postmigration IP address errors
 
-include::modules/ref_Logs.adoc[leveloffset=+1]
-include::modules/ref_Common_issues_and_mistakes.adoc[leveloffset=+1]
+* xref:Known_issues[] provides information about critical updates and issues that will be addressed in a future release.
+
+include::modules/ref_Migration_logs.adoc[leveloffset=+1]
+include::modules/assembly_Common_issues_and_mistakes.adoc[leveloffset=+1]
 include::modules/ref_Known_issues.adoc[leveloffset=+1]
