--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_target_environment.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_target_environment.adoc
@@ -8,6 +8,11 @@ ifdef::osp[]
 = Preparing the Red Hat OpenStack Platform environment
 endif::osp[]
 
+[NOTE]
+====
+If you upgrade the target environment, you should also xref:Upgrading_the_conversion_hosts[upgrade the conversion hosts] to ensure that you have the latest software and patches.
+====
+
 .Prerequisites
 
 include::ref_Software_compatibility_matrix.adoc[]
@@ -38,7 +43,8 @@ IMS only supports shared storage, such as NFS, iSCSI, or FCP. Local storage is n
 
 . Upload the VirtIO and Guest Tool image files to the ISO storage domain (see link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/html-single/administration_guide/#Uploading_the_VirtIO_and_Guest_Tool_Image_Files_to_an_ISO_Storage_Domain[Uploading the VirtIO and Guest Tool Image Files to an ISO Storage Domain] in the _Red Hat Virtualization Administration Guide_). The VirtIO file name must include the version number: +virtio-win-_version_.iso+. The Guest Tool is required for migrating Windows virtual machines.
 
-. If you are using SSSD with single sign-on, reinstall `ipa-client` without configuring the OpenSSH client:[[Reinstalling_ipa_client]]
+[[Reinstalling_ipa_client]]
+. If you are using SSSD with single sign-on, reinstall `ipa-client` without configuring the OpenSSH client:
 +
 [options="nowrap" subs="+quotes,verbatim"]
 ----
@@ -46,7 +52,7 @@ IMS only supports shared storage, such as NFS, iSCSI, or FCP. Local storage is n
 # ipa-client-install --no-ssh
 ----
 +
-Otherwise, SSH will fail for the vdsm user (see link:https://bugzilla.redhat.com/show_bug.cgi?id=1544379[] for details). This issue cannot be resolved by modifying the configuration file because the file is restored during upgrades.
+Otherwise, SSH will fail for the vdsm user (see link:https://bugzilla.redhat.com/show_bug.cgi?id=1544379[]). This issue cannot be resolved by modifying the configuration file because the file is restored during upgrades.
 endif::rhv[]
 ifdef::osp[]
 == Installing and configuring OpenStack Platform
@@ -76,25 +82,30 @@ Outbound traffic is enabled by default. If you have changed this setting, enable
 . Create flavors for the source virtual machines. If you do not create custom flavors, CloudForms will try to map each source virtual machine to an existing flavor.
 endif::osp[]
 
-== Installing and configuring Cloudforms
+== Installing and configuring CloudForms
 
 ifdef::rhv[]
 . Install Red Hat CloudForms 4.7 on the Manager machine (see link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html/installing_red_hat_cloudforms_on_red_hat_virtualization[Installing Red Hat CloudForms on Red Hat Virtualization]).
 
 . Add VMware (see link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html-single/managing_providers/#vmware_vcenter_providers[Adding a VMware vCenter Provider] in _Red Hat CloudForms Managing Providers_) and Red Hat Virtualization (see https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html-single/managing_providers/#adding_a_red_hat_virtualization_provider[Adding a Red Hat Virtualization Provider] in _Red Hat CloudForms Managing Providers_) as providers.
++
+[NOTE]
+====
+Removing or changing a provider, including refreshing hosts, before, during, or after the migration will cause errors in the infrastructure mappings and migration plans.
+====
++
+You are ready to xref:Configuring_the_rhv_conversion_hosts[configure the conversion hosts].
 endif::rhv[]
 ifdef::osp[]
 . Install Red Hat CloudForms 4.7 (see link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html-single/installing_red_hat_cloudforms_on_red_hat_openstack_platform/[Installing Red Hat CloudForms on Red Hat OpenStack Platform]).
 
 . Add VMware (see link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html-single/managing_providers/#vmware_vcenter_providers[Adding a VMware vCenter Provider] in _Red Hat CloudForms Managing Providers_) and OpenStack Platform (see link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html-single/managing_providers/#adding_an_openstack_infrastructure_provider[Adding an OpenStack Infrastructure Provider] in _Red Hat CloudForms Managing Providers_) as providers.
-endif::osp[]
 +
 [NOTE]
 ====
-Do not remove or change a provider (including refreshing hosts) before, during, or after migration because these actions cause errors in the infrastructure mappings and migration plans.
+Removing or changing a provider before, during, or after the migration will cause errors in the infrastructure mappings and migration plans.
 ====
 
-ifdef::osp[]
 [id="Deploying_osp_conversion_hosts"]
 == Deploying OpenStack Platform conversion hosts
 You download the conversion host appliance and use it to deploy the conversion host instances. The number of conversion hosts you deploy depends on your migration size and infrastructure capabilities. See xref:Number_of_conversion_hosts[] for details.
@@ -108,6 +119,7 @@ You download the conversion host appliance and use it to deploy the conversion h
 ====
 Always download the latest version of the OpenStack Platform conversion appliance because it contains patches and fixes. The OpenStack Platform 14 conversion appliance can be used with both OpenStack Platform 13 and 14.
 ====
+
 . Upload the appliance to Glance storage.
 . Deploy the appliance as a conversion host instance, with the following resources:
 +
@@ -116,7 +128,7 @@ Always download the latest version of the OpenStack Platform conversion applianc
 ** `/tmp` (1 GB for each conversion)
 ** `/var/tmp` (1 GB for each conversion)
 ** `/var/logs` (5 GB)
-
++
 [NOTE]
 ====
 For optimal performance:
@@ -124,9 +136,6 @@ For optimal performance:
 * Deploy the conversion hosts on more than one hypervisor.
 * Deploy the conversion hosts on a compute node with nested virtualization enabled. See link:https://docs.openstack.org/devstack/latest/guides/devstack-with-nested-kvm.html[]. Nested virtualization is a technology preview.
 ====
-
++
 You are ready to xref:Configuring_the_osp_conversion_hosts[configure the conversion hosts].
 endif::osp[]
-ifdef::rhv[]
-You are ready to xref:Configuring_the_rhv_conversion_hosts[configure the conversion hosts].
-endif::rhv[]
