--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Known_issues.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Known_issues.adoc
@@ -1,28 +1,31 @@
+// Module included in the following assemblies:
+// assembly_Troubleshooting.adoc
 [id="Known_issues"]
 = Known Issues
 
-After installing IMS, you must obtain critical updates for Red Hat Virtualization and the OpenStack Platform conversion appliance by doing the following:
+To obtain critical updates for the conversion hosts:
 
-** Red Hat Virtualization: Run `yum update`.
+* Red Hat Virtualization:
++
+[options="nowrap" subs="+quotes,verbatim"]
+----
+# yum update
+# cp /usr/share/ansible/roles/oVirt.v2v-conversion-host/files/virt-v2v-wrapper.py /usr/bin/
+----
 
-** OpenStack Platform: Contact link:https://access.redhat.com/support/cases/#/case/new[Red Hat Support] for a newer version of the appliance build.
+* OpenStack Platform: Contact Red Hat Support (link:https://access.redhat.com/support/cases/#/case/new[]) for a newer version of the conversion appliance.
 
-These items will be addressed in a future release.
+.Issues to be addressed in a future release
 
-.All platforms
+* Canceling a migration does not stop the creation of volumes, instances, and network ports (OpenStack Platform), or virtual machines (Red Hat Virtualization). link:https://bugzilla.redhat.com/show_bug.cgi?id=1666799[]
 
-* Canceling a migration does not stop the creation of volumes, instances, and network ports (OpenStack Platform), or virtual machines (Red Hat Virtualization).  link:https://bugzilla.redhat.com/show_bug.cgi?id=1666799[BZ#1666799]
+* Virtual machines whose names contain international characters or spaces fail to migrate using SSH transformation. link:https://bugzilla.redhat.com/show_bug.cgi?id=1669240[]
 
-* Virtual machines whose names contain international characters or spaces fail to migrate using SSH transformation. link:https://bugzilla.redhat.com/show_bug.cgi?id=1669240[BZ#1669240]
+* Virtual machines whose names contain international characters or spaces fail to migrate using VDDK transformation. link:https://bugzilla.redhat.com/show_bug.cgi?id=1669286[]
 
-* Virtual machines whose names contain international characters or spaces fail to migrate using VDDK transformation. link:https://bugzilla.redhat.com/show_bug.cgi?id=1669286[BZ#1669286]
+* Red Hat Virtualization: Refreshing the hosts causes the network(s) and datastore to disappear from infrastructure mappings. link:https://bugzilla.redhat.com/show_bug.cgi?id=1669176[]
 
-.Red Hat Virtualization
+* OpenStack Platform:
 
-* Refreshing the hosts causes the network(s) and datastore to disappear from infrastructure mappings. link:https://bugzilla.redhat.com/show_bug.cgi?id=1669176[BZ#1669176]
-
-.OpenStack Platform
-
-* Instance is not created after disk conversion. link:https://bugzilla.redhat.com/show_bug.cgi?id=1668049[BZ#1668049]
-
-* Names of virtual machines that were migrated using SSH transformation change during migration. link:https://bugzilla.redhat.com/show_bug.cgi?id=1669133[BZ#1669133]
+** Instance is not created after disk conversion. link:https://bugzilla.redhat.com/show_bug.cgi?id=1668049[]
+** Names of virtual machines that were migrated using SSH transformation change during migration. link:https://bugzilla.redhat.com/show_bug.cgi?id=1669133[]
