--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Software_compatibility_matrix.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Software_compatibility_matrix.adoc
@@ -1,3 +1,5 @@
+// Module included in the following assemblies:
+// assembly_Preparing_the_target_environment.adoc
 * Compatible software versions:
 +
 .Software compatibility matrix
