--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_IMS_overview.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_IMS_overview.adoc
@@ -1,4 +1,4 @@
-[id="Infrastructure_migration_solution_overview"]
+[id="IMS_overview"]
 = Infrastructure Migration Solution overview
 
 The Red Hat Infrastructure Migration Solution (IMS) enables you to migrate virtual machines from VMware 5.5 (and later) to the following target environments:
@@ -15,7 +15,7 @@ The migration process is performed with CloudForms 4.7, a user interface for man
 
 .Migration phases
 
-The Infrastructure Migration Solution has the following key phases:
+The migration has the following key phases:
 
 . xref:Planning_the_migration[Planning the migration]
 
