--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Planning.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Planning.adoc
@@ -1,4 +1,4 @@
-[[Planning_the_migration]]
+[id="Planning_the_migration"]
 = Planning the migration
 
 During the planning phase, you will formulate a specific migration goal, for example, "I want to migrate 2000 virtual machines, with 200 TB of data, in less than 6 months".
