--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Preparation.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Preparation.adoc
@@ -5,14 +5,14 @@ Preparing the environment for migration involves the following key steps:
 
 . xref:Preparing_the_vmware_source_environment[Preparing the source environment], by extending the network and checking the virtual machines
 
-. Preparing the target environment by configuring the storage and networks, installing software, and configuring CloudForms:
+. Preparing the target environment, by configuring the storage and networks, installing software, and configuring CloudForms:
 
 * xref:Preparing_the_rhv_target_environment[Preparing the Red Hat Virtualization environment]
 * xref:Preparing_the_osp_target_environment[Preparing the OpenStack Platform environment] and xref:Deploying_osp_conversion_hosts[deploying the conversion hosts]
 
 . xref:Configuring_conversion_hosts_for_transformation[Configuring the conversion hosts for transformation]
 +
-Optionally, you can xref:Configuring_the_maximum_number_of_concurrent_migrations[change the maximum number of concurrent migrations] for better performance and control of the migration process
+Optionally, you can xref:Configuring_the_maximum_number_of_concurrent_migrations[change the maximum number of concurrent migrations] for better performance and control of the migration process.
 
 include::modules/proc_Preparing_the_vmware_source_environment.adoc[leveloffset=+1]
 include::modules/assembly_Preparing_the_target_environment.adoc[leveloffset=+1]
