--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_IMS_overview.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_IMS_overview.adoc
@@ -34,7 +34,9 @@ The infrastructure migration has the following key steps:
 . xref:Migrating_the_infrastructure[Migrating the infrastructure in CloudForms]
 +
 * xref:Creating_an_infrastructure_mapping[Mapping the source and target infrastructures]
-* xref:Creating_and_running_a_migration_plan[Creating and running a migration plan]. For a detailed description of the migration process, see xref:Vmware_to_rhv_migration_workflow[] or xref:Vmware_to_osp_migration_workflow[].
+* xref:Creating_and_running_a_migration_plan[Creating and running a migration plan]
++
+For a detailed description of the migration process, see xref:Vmware_to_rhv_migration_workflow[] or xref:Vmware_to_osp_migration_workflow[].
 
 include::modules/con_Vmware_to_rhv_migration_workflow.adoc[leveloffset=+1]
 include::modules/con_Vmware_to_osp_migration_workflow.adoc[leveloffset=+1]
