--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Migrating_the_infrastructure.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Migrating_the_infrastructure.adoc
@@ -1,4 +1,4 @@
-[[Migrating_the_infrastructure]]
+[id="Migrating_the_infrastructure"]
 = Migrating the infrastructure
 
 Migrating the infrastructure involves the following key tasks:
