--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Best_practices_for_migration.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Best_practices_for_migration.adoc
@@ -43,7 +43,7 @@ Deploying the conversion hosts::
 
 Controlling the migration process::
 * Create multiple migration plans for finer control.
-* Perform test migrations with different maximum numbers of concurrent migrations to assess the capabilities of your environment's infrastructure. See xref:Configuring_the_maximum_number_of_concurrent_migrations[].
+* Perform test migrations with different maximum numbers of concurrent migrations to assess the capabilities of your environment's infrastructure (see xref:Configuring_the_maximum_number_of_concurrent_migrations[]).
 
 [[Number_of_conversion_hosts]]
 == How many conversion hosts do I need?
