--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Preparation.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Preparation.adoc
@@ -12,9 +12,9 @@ Preparing the environment for migration involves the following key steps:
 
 . xref:Configuring_conversion_hosts_for_transformation[Configuring the conversion hosts for transformation]
 +
-Optionally, you can xref:Configuring_the_maximum_number_of_concurrent_migrations[change the maximum number of concurrent migrations] for better performance and control of the migration process.
+Optionally, you can change the maximum number of concurrent migrations for better performance and control of the migration process.
 
 include::modules/proc_Preparing_the_vmware_source_environment.adoc[leveloffset=+1]
 include::modules/assembly_Preparing_the_target_environment.adoc[leveloffset=+1]
-include::assembly_Conversion_hosts.adoc[leveloffset=+1]
+include::modules/assembly_Configuring_conversion_hosts_for_transformation.adoc[leveloffset=+1]
 include::modules/proc_Configuring_the_maximum_number_of_concurrent_migrations.adoc[leveloffset=+1]
