--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/master.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/master.adoc
@@ -5,12 +5,13 @@
 :toclevels: 3
 :compat-mode:
 :experimental:
-:numbered:
+:numbered!:
 :IMS:
 
 // Attributes
-// include::common/attributes/ims.adoc[]
+include::common/attributes/ims.adoc[]
 
+:numbered:
 include::doc/assembly_IMS_overview.adoc[leveloffset=+1]
 include::doc/assembly_Planning.adoc[leveloffset=+1]
 include::doc/assembly_Preparation.adoc[leveloffset=+1]
