Trying to fix broken links

--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Migrating_the_infrastructure.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Migrating_the_infrastructure.adoc
@@ -1,4 +1,4 @@
-// [id="Migrating_the_infrastructure"]
+[id="Migrating_the_infrastructure"]
 = Migrating the infrastructure
 
 Migrating the infrastructure involves the following key tasks:
@@ -7,4 +7,4 @@ Migrating the infrastructure involves the following key tasks:
 . xref:Creating_and_running_a_migration_plan[]
 
 include::modules/proc_Creating_an_infrastructure_mapping.adoc[leveloffset=+1]
-include::modules/proc_Creating_and_running_a_migration_plan.adoc[leveloffset=+1]
+include::modules/assembly_Creating_and_running_a_migration_plan.adoc[leveloffset=+1]
