--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/assembly_Creating_and_running_a_migration_plan.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/assembly_Creating_and_running_a_migration_plan.adoc
@@ -1,5 +1,5 @@
 // Module included in the following assemblies:
-// assembly_Migration.adoc
+// assembly_Migrating_the_infrastructure.adoc
 [id="Creating_and_running_a_migration_plan"]
 = Creating and running a migration plan
 
