--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_the_ssh_connection_to_vmware_hypervisors.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_the_ssh_connection_to_vmware_hypervisors.adoc
@@ -45,6 +45,6 @@ ifdef::osp[]
 +
 If the connection is successful, the OpenStack Platform conversion host is correctly configured for SSH transformation.
 +
-You can xref:Migrating_the_infrastructure[migrate the infrastructure].
+You can migrate the infrastructure.
 
 endif::osp[]
