--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_an_infrastructure_mapping.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_an_infrastructure_mapping.adoc
@@ -73,4 +73,4 @@ You can click an infrastructure mapping element to view its details:
 .Infrastructure Mappings list
 image:Infra_mappings_list.png[]
 
-After you have created an infrastructure mapping, you can xref:Creating_and_running_a_migration_plan[create and run a migration plan].
+After you have created an infrastructure mapping, you are ready to create and run a migration plan.
