--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_IMS_overview.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_IMS_overview.adoc
@@ -13,9 +13,9 @@ Red Hat OpenStack Platform enables you to create a scaleable, fault-tolerant, pr
 
 The migration process is performed with CloudForms 4.7, a user interface for managing the infrastructure (for more information, see the link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/[Red Hat CloudForms documentation]).
 
-The migration process has the following key phases:
+The migration process has the following key steps:
 
-. xref:Planning_the_migration[Planning the migration]
+. xref:Planning_the_migration[Planning the migration]:
 +
 * xref:Planning_questions[Questions to ask before migration], to help you assess the resources and time required for your migration
 * xref:Best_practices_for_migration[Recommendations for migration], to minimize the impact on your users
@@ -26,10 +26,10 @@ The migration process has the following key phases:
 * xref:Preparing_the_target_environment[Preparing the target environment], including configuring the target storage and networks, installing software, and configuring CloudForms
 * xref:Configuring_conversion_hosts_for_transformation[Configuring the conversion hosts]. Conversion hosts are RHV hosts or OpenStack Platform instances running `virt-v2v` and `virt-v2v-wrapper`, which perform the migration.
 
-. xref:Migrating_the_infrastructure[Migrating the infrastructure]
-+
-* xref:Creating_an_infrastructure_mapping[Creating an infrastructure mapping], to map your source and target infrastructures
-* xref:Creating_and_running_a_migration_plan[Creating and running a migration plan]
+// . xref:Migrating_the_infrastructure[Migrating the infrastructure]
+// +
+// * xref:Creating_an_infrastructure_mapping[Creating an infrastructure mapping], to map your source and target infrastructures
+// * xref:Creating_and_running_a_migration_plan[Creating and running a migration plan]
 +
 For a detailed description of the migration process, see xref:Vmware_to_rhv_workflow[] or xref:Vmware_to_osp_workflow[].
 
