--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Vmware_to_rhv_workflow.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Vmware_to_rhv_workflow.adoc
@@ -1,3 +1,5 @@
+// Module included in the following assemblies:
+// assembly_IMS_overview.adoc
 [id="Vmware_to_rhv_workflow"]
 = Red Hat Virtualization migration workflow
 
@@ -6,7 +8,7 @@ This diagram describes the workflow of a migration to Red Hat Virtualization.
 .VMware to Red Hat Virtualization migration workflow
 image:vmware_to_rhv_migration_workflow.png[]
 
-image:1.png[height=25] You run a xref:Creating_and_running_a_migration_plan[migration plan] in CloudForms.
+image:1.png[height=25] You run a migration plan in CloudForms.
 
 image:2.png[height=25] CloudForms uses the migration plan to locate the source virtual machines.
 
