--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_conversion_hosts_for_transformation.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_conversion_hosts_for_transformation.adoc
@@ -199,7 +199,7 @@ ifdef::osp[]
 # ansible-playbook --ask-vault-pass -i _controller_node_FQDN_or_IP_, conversion_host_check.yml
 ----
 +
-// * If you are configuring your OpenStack Platform conversion host for VDDK, you can xref:Migrating_the_infrastructure[migrate the infrastructure].
+* If you are configuring your OpenStack Platform conversion host for VDDK, you can migrate the infrastructure.
 * If you are configuring your OpenStack Platform conversion host for SSH, you can xref:Configuring_ssh_connection_for_osp[configure the SSH connection to the VMware hypervisors].
 
 :context: osp
@@ -230,7 +230,7 @@ include::proc_Configuring_the_ssh_connection_to_vmware_hypervisors.adoc[]
 . Click *Validate* and wait for validation to complete.
 . Click *Save*.
 +
-You can xref:Migrating_the_infrastructure[migrate the infrastructure].
+You can migrate the infrastructure.
 
 [[Upgrading_the_conversion_hosts]]
 .Upgrading the conversion hosts
