--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_target_environment.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_target_environment.adoc
@@ -3,15 +3,20 @@
 [id="Preparing_the_{context}_target_environment"]
 ifdef::rhv[]
 = Preparing the Red Hat Virtualization environment
-endif::rhv[]
-ifdef::osp[]
-= Preparing the Red Hat OpenStack Platform environment
-endif::osp[]
 
 [NOTE]
 ====
-If you upgrade the target environment, you should also xref:Upgrading_the_conversion_hosts[upgrade the conversion hosts] to ensure that you have the latest software and patches.
+If you upgrade the target environment, you should also xref:Upgrading_the_rhv_conversion_hosts[upgrade the conversion hosts] to ensure that you have the latest software and patches.
 ====
+endif::rhv[]
+ifdef::osp[]
+= Preparing the Red Hat OpenStack Platform environment
+
+[NOTE]
+====
+If you upgrade the target environment, you should also xref:Upgrading_the_osp_conversion_hosts[upgrade the conversion hosts] to ensure that you have the latest software and patches.
+====
+endif::osp[]
 
 .Prerequisites
 
